force-app/main/default/objects/Holder_Routing_Detail__c/Holder_Routing_Detail__c.object-meta.xml
<CustomObject>
    <label>Holder Routing Detail</label>
    <nameField>
        <label>Holder Routing Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Routing Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>