force-app/main/default/objects/Holder_Routing_Detail__c/fields/Num2Val__c.field-meta.xml
<CustomField>
    <fullName>Num2Val__c</fullName>
    <label>Num2Val</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>