force-app/main/default/objects/Holder_Routing_Detail__c/fields/OPERATION__c.field-meta.xml
<CustomField>
    <fullName>OPERATION__c</fullName>
    <label>OPERATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>