force-app/main/default/objects/Holder_Routing_Detail__c/fields/Operation_Numeric_Val__c.field-meta.xml
<CustomField>
    <fullName>Operation_Numeric_Val__c</fullName>
    <formula>VALUE( OPERATION__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation Numeric Val</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>