force-app/main/default/objects/Holder_Routing_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>Standard_Operation_ID__c</columns>
    <columns>OPERATION__c</columns>
    <columns>Operation_Numeric_Val__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>